--- a/03travel/index.html
+++ b/03travel/index.html
@@ -295,42 +295,42 @@
 					<h2>TRAVEL <span>GO</span></h2>
 					<p>지금,여행이 떠나고 싶다면?<br>하이미디어와 여행을 떠나자!</p>
 				</div>
-				<div class="mct01ct03 tr_boxset hv_sc"><a href="">
+				<div class="mct01ct03 tr_boxset hv_sc hv_ul"><a href="">
 					<img src="images/mct01_03.jpg" alt="">
 					<div class="mct01ct03txt clearfix tr_p02">
-						<p class="left">프랑스</p>
+						<p class="left tul">프랑스</p>
 						<p class="right">₩1,900,000~</p>
 					</div>
 				</a></div>
-				<div class="mct01ct03 tr_boxset hv_sc"><a href="">
+				<div class="mct01ct03 tr_boxset hv_sc hv_ul"><a href="">
 					<img src="images/mct01_04.jpg" alt="">
 					<div class="mct01ct03txt clearfix tr_p02">
-						<p class="left">일본</p>
+						<p class="left tul">일본</p>
 						<p class="right">₩890,000~</p>
 					</div>
 				</a></div>
 			</div>
 			<div class="mct02 clearfix">
 				<div class="tr_boxset">
-					<ul class="slider02 hv_sc">
+					<ul class="slider02 hv_sc hv_ul">
 						<li>
 							<img src="images/mct02_01.jpg" alt="">
 							<div class="slider02txt tr_p01"><a href="">
-								<p class="fwb">HILLTON HOTEL1 (PARIS)</p>
+								<p class="fwb tul">HILLTON HOTEL1 (PARIS)</p>
 								<p><span class="star">★★★</span>★★</p>
 							</a></div>
 						</li>
 						<li>
 							<img src="images/mct02_01.jpg" alt="">
 							<div class="slider02txt tr_p01"><a href="">
-								<p class="fwb">HILLTON HOTEL2 (PARIS)</p>
+								<p class="fwb tul">HILLTON HOTEL2 (PARIS)</p>
 								<p><span class="star">★★★</span>★★</p>
 							</a></div>
 						</li>
 						<li>
 							<img src="images/mct02_01.jpg" alt="">
 							<div class="slider02txt tr_p01"><a href="">
-								<p class="fwb">HILLTON HOTEL3 (PARIS)</p>
+								<p class="fwb tul">HILLTON HOTEL3 (PARIS)</p>
 								<p><span class="star">★★★</span>★★</p>
 							</a></div>
 						</li>
@@ -339,25 +339,25 @@
 					<div class="prvbtn"><img src="images/control_prev.png" alt=""></div>
 				</div>
 				<div class="tr_boxset">
-					<ul class="slider03 hv_sc">
+					<ul class="slider03 hv_sc hv_ul">
 						<li>
 							<img src="images/mct02_02.jpg" alt="">
 							<div class="slider02txt tr_p01"><a href="">
-								<p class="fwb">관광명소1(디즈니랜드)</p>
+								<p class="fwb tul">관광명소1(디즈니랜드)</p>
 								<p><span class="star">★★★</span>★★</p>
 							</a></div>
 						</li>
 						<li>
 							<img src="images/mct02_02.jpg" alt="">
 							<div class="slider02txt tr_p01"><a href="">
-								<p class="fwb">관광명소2(디즈니랜드)</p>
+								<p class="fwb tul">관광명소2(디즈니랜드)</p>
 								<p><span class="star">★★★</span>★★</p>
 							</a></div>
 						</li>
 						<li>
 							<img src="images/mct02_02.jpg" alt="">
 							<div class="slider02txt tr_p01"><a href="">
-								<p class="fwb">관광명소3(디즈니랜드)</p>
+								<p class="fwb tul">관광명소3(디즈니랜드)</p>
 								<p><span class="star">★★★</span>★★</p>
 							</a></div>
 						</li>
@@ -365,15 +365,15 @@
 					<div class="nxtbtn2"><img src="images/control_next.png" alt=""></div>
 					<div class="prvbtn2"><img src="images/control_prev.png" alt=""></div>
 				</div>
-				<div class="mct02ct03 tr_boxset hv_sc">
+				<div class="mct02ct03 tr_boxset hv_sc hv_ul">
 					<img src="images/mct02_03.jpg" alt="">
 					<h2 class="pt10">TOKYO</h2>
-					<div class="mct02ct03txt tr_p01"><a href="">
-						<p class="fwb">20℃ <span>구름조금</span></p>
+					<div class="mct02ct03txt tr_p01 ts03"><a href="">
+						<p class="fwb tul">20℃ <span>구름조금</span></p>
 						<p class="tokyowst">습도 60% 바람 남남동 2m/s</p>
 					</a></div>
 				</div>
-				<div class="mct02ct04 tr_boxset mr0 hv_sc">
+				<div class="mct02ct04 tr_boxset mr0 hv_sc hv_ul">
 					<img src="images/mct02_04.jpg" alt="">
 					<div class="mct02ct04mtxt">
 						<p class="ct04mtxt">"해외여행은 처음이었는데,<br>하이미디어여행 덕분에 무사히<br>다녀올 수 있었어요."</p>
@@ -381,24 +381,24 @@
 						<p class="star">★★★<span class="star2">★★</span></p>
 					</div>
 					<div class="mct02ct04stxt tr_p01"><a href="">
-						<p class="fwb">facebook 여행후기</p>
+						<p class="fwb tul">facebook 여행후기</p>
 						<p class="fbn">(임정희님)</p>
 					</a></div>
 				</div>
 			</div>
 			<div class="mct03 clearfix">
-				<div class="tr_boxset mct03wrap hv_sc2">
+				<div class="tr_boxset mct03wrap hv_sc2 hv_ul">
 					<img src="images/mct03_01.jpg" alt="" class="pr0">
 					<div class="mct03ct01 clearfix tr_p04">
 						<h2 class="clearfix"><img src="images/box07_icon.png" alt="">여행정보</h2>
-						<p>다양한 나라의 명소와 맛집 등<br>상세한 정보를 볼 수 있습니다.</p>
+						<p class="tul">다양한 나라의 명소와 맛집 등<br>상세한 정보를 볼 수 있습니다.</p>
 						<div class="plusbtn">
 							<img src="images/plus_btn.png" alt="" class="plusbtn1 pr0">
 							<img src="images/plus2_btn.png" alt="" class="plusbtn2 pr0">
 						</div>
 					</div>
 				</div>
-				<div class="tr_boxset mct03wrap hv_sc2">
+				<div class="tr_boxset mct03wrap hv_sc2 hv_ul">
 					<img src="images/mct03_02.jpg" alt="" class="pr0">
 					<div class="mct03ct02 clearfix tr_p04">
 						<div class="plus2btn">
@@ -406,10 +406,10 @@
 							<img src="images/plus2_btn.png" alt="" class="plusbtn2 pr0">
 						</div>
 						<h2 class="clearfix"><img src="images/box08_icon.png" alt="">맛집정보</h2>
-						<p>다양한 나라의 명소와 맛집 등<br>상세한 정보를 볼 수 있습니다.</p>
+						<p class="tul">다양한 나라의 명소와 맛집 등<br>상세한 정보를 볼 수 있습니다.</p>
 					</div>
 				</div>
-				<div class="tr_boxset mct03wrap hv_sc2">
+				<div class="tr_boxset mct03wrap hv_sc2 hv_ul">
 					<img src="images/mct03_03.jpg" alt="" class="pr0">
 					<div class="mct03ct03 clearfix tr_p04">
 						<div class="plus2btn">
@@ -417,14 +417,14 @@
 							<img src="images/plus2_btn.png" alt=""  class="plusbtn2 pr0">
 						</div>
 						<h2 class="clearfix"><img src="images/box09_icon.png" alt="">숙박정보</h2>
-						<p>다양한 나라의 명소와 맛집 등<br>상세한 정보를 볼 수 있습니다.</p>
+						<p class="tul">다양한 나라의 명소와 맛집 등<br>상세한 정보를 볼 수 있습니다.</p>
 					</div>
 				</div>
-				<div class="tr_boxset mct03wrap mr0 hv_sc2">
+				<div class="tr_boxset mct03wrap mr0 hv_sc2 hv_ul">
 					<img src="images/mct03_04.jpg" alt="" class="pr0">
 					<div class="mct03ct04 clearfix tr_p04">
 						<h2 class="clearfix"><img src="images/box10_icon.png" alt="">여행자후기</h2>
-						<p>다양한 나라의 명소와 맛집 등<br>상세한 정보를 볼 수 있습니다.</p>
+						<p class="tul">다양한 나라의 명소와 맛집 등<br>상세한 정보를 볼 수 있습니다.</p>
 						<div class="plusbtn">
 							<img src="images/plus_btn.png" alt="" class="plusbtn1 pr0">
 							<img src="images/plus2_btn.png" alt="" class="plusbtn2 pr0">
