--- a/03travel/index.html
+++ b/03travel/index.html
@@ -12,7 +12,7 @@
 	<script src="js/jquery.bxslider.js"></script>
 	<script>
 		$(document).ready(function(){
-			$(".slider01").bxSlider({controls:false, pagerCustom:".slider01tab", mode:"vertical", auto:true});
+			$(".slider01").bxSlider({controls:false, pagerCustom:".slider01tab", mode:"vertical", auto:true, touchEnabled:false});
 			var mct02sl = $(".slider02").bxSlider({pager:false, controls:false, auto:true});
 			$(".prvbtn").click(function(){mct02sl.goToPrevSlide()});
 			$(".nxtbtn").click(function(){mct02sl.goToNextSlide()});
@@ -33,7 +33,7 @@
 <body>
 	<header class="header">
 		<div class="headertop container clearfix">
-			<h1><a href="javascript-void(0)" class="blind">travel 하이미디어</a></h1>
+			<h1><a href="index.html" class="blind">travel 하이미디어</a></h1>
 			<fieldset>
 				<legend class="blind">검색창</legend>
 				<div class="field hds">
@@ -52,12 +52,12 @@
 		</div>
 		<div class="headerbottomWrap">
 			<ul class="headerbottom container clearfix tac">
-				<li><a href="javascript-void(0)">여행도시</a></li>
-				<li><a href="javascript-void(0)">호텔예약</a></li>
-				<li><a href="javascript-void(0)">렌트카</a></li>
-				<li class="new_btn"><a href="javascriptvoid(0)">여행TIP</a></li>
-				<li><a href="javascript-void(0)">회사소개</a></li>
-				<li><a href="javascript-void(0)">커뮤니티</a></li>
+				<li><a href="index_company.html">여행도시</a></li>
+				<li><a href="index_company.html">호텔예약</a></li>
+				<li><a href="index_company.html">렌트카</a></li>
+				<li class="new_btn"><a href="index_company.html">여행TIP</a></li>
+				<li><a href="index_company.html">회사소개</a></li>
+				<li><a href="index_company.html">커뮤니티</a></li>
 			</ul>
 		</div>
 	</header>
