--- a/03travel/index.html
+++ b/03travel/index.html
@@ -31,9 +31,9 @@
 	</style>
 </head>
 <body>
-	<header class="header">
+	<header class="header" id="header">
 		<div class="headertop container clearfix">
-			<h1><a href="index.html" class="blind">travel 하이미디어</a></h1>
+			<h1><a href="index.html#header" class="blind">travel 하이미디어</a></h1>
 			<fieldset>
 				<legend class="blind">검색창</legend>
 				<div class="field hds">
@@ -64,9 +64,6 @@
 	<div class="containerWrap">
 		<div class="aniWrap">
 			<img src="images/airpl.png" alt="" class="airpl">
-			<img src="images/balloon03.png" alt="" class="ani_bu01 balloon01">
-			<img src="images/balloon02.png" alt="" class="ani_bu01 balloon02">
-			<img src="images/balloon01.png" alt="" class="ani_bu01 balloon03">
 			<img src="images/content5.png" alt="" class="ani_bu02">
 		</div>
 		<div class="content container pt55">
@@ -294,6 +291,9 @@
 				<div class="mct01title ptb10">
 					<h2>TRAVEL <span>GO</span></h2>
 					<p>지금,여행이 떠나고 싶다면?<br>하이미디어와 여행을 떠나자!</p>
+					<img src="images/balloon03.png" alt="" class="ani_bu01 balloon01">
+					<img src="images/balloon02.png" alt="" class="ani_bu01 balloon02">
+					<img src="images/balloon01.png" alt="" class="ani_bu01 balloon03">
 				</div>
 				<div class="mct01ct03 tr_boxset hv_sc hv_ul"><a href="">
 					<img src="images/mct01_03.jpg" alt="">
