--- a/03travel/index_company.html
+++ b/03travel/index_company.html
@@ -14,7 +14,7 @@
 <body>
 	<header class="header">
 		<div class="headertop container clearfix">
-			<h1><a href="javascript-void(0)" class="blind">travel 하이미디어</a></h1>
+			<h1><a href="index.html#header" class="blind">travel 하이미디어</a></h1>
 			<fieldset>
 				<legend class="blind">검색창</legend>
 				<div class="field hds">
@@ -33,12 +33,12 @@
 		</div>
 		<div class="headerbottomWrap">
 			<ul class="headerbottom container clearfix tac">
-				<li><a href="javascript-void(0)">여행도시</a></li>
-				<li><a href="javascript-void(0)">호텔예약</a></li>
-				<li><a href="javascript-void(0)">렌트카</a></li>
-				<li class="new_btn"><a href="javascriptvoid(0)">여행TIP</a></li>
-				<li><a href="javascript-void(0)">회사소개</a></li>
-				<li><a href="javascript-void(0)">커뮤니티</a></li>
+				<li><a href="index_company.html">여행도시</a></li>
+				<li><a href="index_company.html">호텔예약</a></li>
+				<li><a href="index_company.html">렌트카</a></li>
+				<li class="new_btn"><a href="index_company.html">여행TIP</a></li>
+				<li><a href="index_company.html">회사소개</a></li>
+				<li><a href="index_company.html">커뮤니티</a></li>
 			</ul>
 		</div>
 	</header>
