--- a/03travel/index.html
+++ b/03travel/index.html
@@ -52,19 +52,19 @@
 		</div>
 		<div class="headerbottomWrap">
 			<ul class="headerbottom container clearfix tac">
-				<li><a href="index_company.html">여행도시</a></li>
-				<li><a href="index_company.html">호텔예약</a></li>
-				<li><a href="index_company.html">렌트카</a></li>
-				<li class="new_btn"><a href="index_company.html">여행TIP</a></li>
+				<li><a href="index_city.html">여행도시</a></li>
+				<li><a href="index_hotel.html">호텔예약</a></li>
+				<li><a href="index_rent.html">렌트카</a></li>
+				<li class="new_btn"><a href="index_tip.html">여행TIP</a></li>
 				<li><a href="index_company.html">회사소개</a></li>
-				<li><a href="index_company.html">커뮤니티</a></li>
+				<li><a href="index_community.html">커뮤니티</a></li>
 			</ul>
 		</div>
 	</header>
 	<div class="containerWrap">
 		<div class="aniWrap">
-			<img src="images/airpl.png" alt="" class="airpl">
 			<img src="images/content5.png" alt="" class="ani_bu02">
+			<img src="images/airpl.png" alt="" class="airpl">
 		</div>
 		<div class="content container pt55">
 			<div class="mct01 clearfix">
