--- a/03travel/index_hotel.html
+++ b/03travel/index_hotel.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>subCompany</title>
+	<title>subHotel</title>
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/jquery.bxslider.css">
 	<link rel="stylesheet" href="css/common.css">
@@ -37,17 +37,19 @@
 				<li><a href="index_hotel.html">호텔예약</a></li>
 				<li><a href="index_rent.html">렌트카</a></li>
 				<li class="new_btn"><a href="index_tip.html">여행TIP</a></li>
-				<li><a href="index_company.html">회사소개</a></li>
+				<li><a href="index_tip.html">회사소개</a></li>
 				<li><a href="index_community.html">커뮤니티</a></li>
 			</ul>
 		</div>
 	</header>
 	<div class="containerWrap subbg">
-		<div class="companyBg"></div>
-		<div class="container subCnt company tac pb20 pt40">
-			<h2>COMPANY</h2>
-			<p class="pt10 pb40"><strong>회사소개</strong> 하이미디어와 여행을 떠나세요</p>
-			<img src="images/subCompany.jpg" alt="">
+		<div class="hotelBg"></div>
+		<div class="container subCnt hotel tac pb20 pt40">
+			<h2 class="hotel">HOTEL</h2>
+			<p class="pt10 pb40"><strong>호텔예약</strong> 하이미디어와 여행을 떠나세요</p>
+			<div class="bar"></div>
+			<img src="images/subHotel.jpg" alt="">
+			<div class="bar"></div>
 		</div>
 		<footer class="footer container pt10">
 			<ul class="footerutil clearfix">
