--- a/03travel/index_rent.html
+++ b/03travel/index_rent.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>subCompany</title>
+	<title>subRent</title>
 	<link rel="stylesheet" href="css/reset.css">
 	<link rel="stylesheet" href="css/jquery.bxslider.css">
 	<link rel="stylesheet" href="css/common.css">
@@ -43,11 +43,13 @@
 		</div>
 	</header>
 	<div class="containerWrap subbg">
-		<div class="companyBg"></div>
-		<div class="container subCnt company tac pb20 pt40">
-			<h2>COMPANY</h2>
-			<p class="pt10 pb40"><strong>회사소개</strong> 하이미디어와 여행을 떠나세요</p>
-			<img src="images/subCompany.jpg" alt="">
+		<div class="rentBg"></div>
+		<div class="container subCnt rent tac pb20 pt40">
+			<h2 class="rent">RENTACA</h2>
+			<p class="pt10 pb40"><strong>렌트카</strong> 하이미디어와 여행을 떠나세요</p>
+			<div class="bar"></div>
+			<img src="images/subRent.jpg" alt="">
+			<div class="bar"></div>
 		</div>
 		<footer class="footer container pt10">
 			<ul class="footerutil clearfix">
