--- a/02hangukuniversity/index.html
+++ b/02hangukuniversity/index.html
@@ -8,9 +8,11 @@
 	<link rel="stylesheet" href="css/jquery.bxslider.css">
 	<link rel="stylesheet" href="css/common.css">
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/colorbox.css">
 
 	<script src="js/jquery-3.1.1.min.js"></script>
 	<script src="js/jquery.bxslider.js"></script>
+	<script src="js/jquery.colorbox-min.js"></script>
 
 	<script>
 		$(document).ready(function(){
@@ -18,6 +20,7 @@
 			$(".prevbtn").click(function(){mySlider01.goToPrevSlide()});
 			$(".nextbtn").click(function(){mySlider01.goToNextSlide()});
 			$(".slider02").bxSlider({controls:false, pagerCustom:".slider02pager"});
+			$(".mct07 a").colorbox({iframe:true, innerWidth:560, innerHeight:315});
 		});
 
 	</script>
@@ -161,8 +164,11 @@
 				<li class="mct06">
 					<a href="#"><div>캠퍼스 투어</div></a>
 				</li>
-				<li class="mct07">
-					<a href="#"><img src="images/content_btn.png" alt=""></a>
+				<li class="mct07 hv_sc">
+					<a href="https://www.youtube.com/embed/689GoEBjMhY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" title="장범준">
+						<img src="images/content_img06.jpg" alt="">
+						<div class="mct07_btn"><img src="images/content_btn.png" alt=""></div>
+					</a>
 				</li>
 				<li class="mct08">
 					<ul class="slider02">
