--- a/03travel/index.html
+++ b/03travel/index.html
@@ -26,11 +26,29 @@
 	</script>
 	<style>
 		@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap');
-		@keyframes ani_bu01 {from{margin-top: 25px;}to{margin-top: 50px;}}
-		@keyframes ani_bu02 {0%{margin-right: 10px;}25%{margin-right: 8px;}50%{margin-right: 9px;}75%{margin-right: 6px;}100%{margin-right: 10px;}}
-		@keyframes airpl {from{left: -1100px;}to{left: 1500px;}}
-		@keyframes airpl2 {from{top: 440px;}to{top: 430px;}}				
-		@keyframes ani_bu03{from{transform: rotate(0deg);}to{transform: rotate(360deg);}};
+		@keyframes ani_bu01{
+			from{margin-top: 25px;}
+			to{margin-top: 50px;}
+			}
+		@keyframes ani_bu02{
+			0%{margin-right: 10px;}
+			25%{margin-right: 8px;}
+			50%{margin-right: 9px;}
+			75%{margin-right: 6px;}
+			100%{margin-right: 10px;}
+			}
+		@keyframes airpl{
+			from{left: -1100px;}
+			to{left: 1500px;}
+			}
+		@keyframes airpl2{
+			from{top: 440px;}
+			to{top: 430px;}
+			}				
+		@keyframes ani_bu03{
+			from{transform: rotate(0deg);}
+			to{transform: rotate(360deg);}
+			}
 		body{font-family: 'Noto Sans KR', sans-serif;}				
 	</style>
 </head>
